0025775: "Default Gradient Background" in V3d_Viewer has no effect in new created V3d_View.