src/V3d/V3d_View.cxx
@@ -308,6 +308,7 @@ void V3d_View::SetWindow(const Handle(Aspect_Window)& TheWindow)
   // SetWindow carries out SetRatio and modifies
   MyView->SetContext(MyViewContext) ;
   MyView->SetBackground(MyBackground) ;
+  MyView->SetGradientBackground (MyGradientBackground, Standard_False);
   MyViewer->SetViewOn(this) ;
   MyView->Redraw() ;
 }
